# serde-yaml-bw

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  fuzz.sh  socket.yml
.github/workflows/: api-compat.yml  ci.yml  fuzz-audit.yml  miri.yml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: aliases_merges.rs  duplicate_keys.rs  flow_collections.rs  from_reader.rs  from_slice.rs  fuzz_from_slice.rs  large_scalars.rs  slice_and_reader.rs
serde_yaml_bw_macros/: Cargo.toml
serde_yaml_bw_macros/src/: lib.rs
serde_yaml_bw_macros/tests/: compile.rs  invalid.rs
src/: base64.rs  budget.rs  de.rs  duplicate_key.rs  error.rs  lib.rs  loader.rs  macros.rs  main.rs  mapping.rs  number.rs  path.rs  pathology.rs  ser.rs  with.rs  zmij_format.rs
src/libyaml/: cstr.rs  emitter.rs  error.rs  parser.rs  tag.rs  util.rs
src/value/: de.rs  debug.rs  from.rs  identity.rs  index.rs  mod.rs  partial_eq.rs  resolve_aliases.rs  ser.rs  tagged.rs
tests/: html_root_url.rs  test_alias.rs  test_anchor_alias.rs  test_anchor_only.rs  test_anchor_serialization.rs  test_anchor_wrappers.rs  test_apply_merge.rs  test_apply_merge_errors.rs  test_binary.rs  test_block_scalars.rs  test_bytes.rs  test_check_for_tag.rs  test_composite_keys.rs  test_custom_date_format.rs  test_de.rs  test_de_helpers.rs  test_deserializer_options.rs  test_duplicate_keys.rs  test_end_marker.rs  test_enum_alias_nested.rs  test_enum_external.rs  test_enum_repetition_limit.rs  test_error.rs  test_error_format.rs  test_flow_map.rs  test_flow_seq.rs  test_from_str_value.rs  test_fuzz_crashes.rs  test_historical_failures.rs  test_infinite_invalid.rs  test_io_helpers.rs  test_json.rs  test_macros.rs  test_mapping_entry.rs  test_mapping_ops.rs  test_mapping_ordering.rs  test_merge_cycle.rs  test_merge_keys.rs  test_merge_keys_serde.rs  test_merge_keys_values.rs  (+286 more)
tests/fuzz_crashes/: crash-9a8525d76b79deadbdda3f97289a50bb9ada36b7
tests/utils/: mod.rs
