[package]
name = "serde_yaml_bw"
version = "2.0.2"
# authors = ["David Tolnay <dtolnay@gmail.com>"] # Keeping commented out line as the sign of respect
authors = ["Bourumir Wyngs <bourumir.wyngs@gmail.com>"]
categories = ["encoding", "parser-implementations"]
description = "YAML data format for Serde"
documentation = "https://docs.rs/serde_yaml_bw/latest/serde_yaml_bw/"
edition = "2024"
keywords = ["yaml", "serde", "serialization"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/bourumir-wyngs/serde-yaml-bw"

[dependencies]
indexmap = ">=2.0, <=2.10"# All range tested
itoa = "1.0"
ryu = "1.0"
serde = "1.0"
unsafe-libyaml = "0.2.11"
serde_yaml = "0.9.34+deprecated"

[dev-dependencies]
anyhow = "1.0" # All range tested
indoc = "2.0"
serde_derive = "1.0"
serde_json = "1.0"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
