[package]
name = "serde_yaml_bw"
version = "2.1.1"
# authors = ["David Tolnay <dtolnay@gmail.com>"] # Provided versions up to 0.9.34.
authors = ["Bourumir Wyngs <bourumir.wyngs@gmail.com>"]
categories = ["encoding", "parser-implementations"]
description = "YAML support for Serde with an emphasis on panic-free parsing (including malformed YAML)."
documentation = "https://docs.rs/serde_yaml_bw/latest/serde_yaml_bw/"
edition = "2024"
keywords = ["yaml", "serde", "serialization"]
license = "MIT OR Apache-2.0"

repository = "https://github.com/bourumir-wyngs/serde-yaml-bw"

[dependencies]
indexmap = ">=2.0, <=2.10"# All range tested
itoa = "1.0"
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
unsafe-libyaml = "0.2.11"
base64 = ">=0.21, <=0.22" # All range tested

[dev-dependencies]
anyhow = "1.0" # All range tested
indoc = "2.0"
serde_json = "1.0"
serde_bytes = "0.11"
serde_repr = "0.1"

[lib]
doc-scrape-examples = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--generate-link-to-definition"]
