[package]
name = "serde_yaml_bw-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
[dependencies.serde_yaml_bw]
path = ".."

[[bin]]
name = "from_slice"
path = "fuzz_targets/from_slice.rs"
test = false
doc = false
bench = false


[[bin]]
name = "from_reader"
path = "fuzz_targets/from_reader.rs"
test = false
doc = false
bench = false
